Fix img overflowing parent div

--- a/source/css/partial/post.styl
+++ b/source/css/partial/post.styl
@@ -78,3 +78,5 @@
         p
             margin-block: 0
             margin: 0 0 10px
+        img
+            max-width: 100%
